--- a/template.html
+++ b/template.html
@@ -139,6 +139,15 @@
                 timer.start()
                 timerButton.textContent = "Alga Only";
                 timerButton.setAttribute("disabled", "true")
+
+                fetch(`/set-image-last-viewed?$${imgParams.getImgIdAsGET()}`)
+                    .then(response => {
+                        if (!response.ok) throw new Error('Network response was not ok');
+                        console.log("Last Viewed time updated!")
+                    })
+                    .catch(error => {
+                        console.error('There was a problem with the fetch operation:', error);
+                    });
             });
         }
     </script>
