--- a/template.html
+++ b/template.html
@@ -29,8 +29,9 @@
                 <span class="space"/>
                 <span>Source: </span>
                 <select id="source-type" value="$study_type">
-                    <option value="0">Academic</option>
-                    <option value="1">Pron</option>
+                    <option value="1">Academic</option>
+                    <option value="2">Pron</option>
+                    <option value="3">Artist</option>
                 </select>
             </div>
             <div class="row">
@@ -86,10 +87,10 @@
 
     <script>
         let list = document.getElementById("source-type")
-        list.options[parseInt(list.getAttribute('value'))].setAttribute('selected', 'selected')
+        list.options[parseInt(list.getAttribute('value')) - 1].setAttribute('selected', 'selected')
 
         list = document.getElementById("difficulty")
-        list.options[parseInt(list.getAttribute('value'))].setAttribute('selected', 'selected')
+        list.options[parseInt(list.getAttribute('value')) - 1].setAttribute('selected', 'selected')
 
 
         window.onload = function()
@@ -102,8 +103,7 @@
 
 
             // next
-            const nextButton = document.getElementById("next");
-            nextButton.addEventListener("click", function ()
+            const onClickNext = function ()
             {
                 const curParams = imgParams.getParamsAsGET();
                 const curUrl = window.location.href.split('/');
@@ -113,15 +113,23 @@
                 const prevParams = document.getElementById("prev").getAttribute("prev-params");
                 history.replaceState(null, null, `/study-image/$image_id?$${prevParams}`);
                 window.location.href = url;
-            });
+            }
+            const nextButton = document.getElementById("next");
+            const nextButtonSmall = document.querySelector(".modal-button-next")
+            nextButton.addEventListener("click", onClickNext);
+            nextButtonSmall.addEventListener("click", onClickNext);
 
             // prev
-            const prevButton = document.getElementById("prev");
-            prevButton.setAttribute("prev-params", imgParams.getParamsAsGET())
-            prevButton.addEventListener("click", function ()
+            const onClickPrev = function ()
             {
                 window.history.back()
-            });
+            }
+            const prevButton = document.getElementById("prev");
+            const prevButtonSmall = document.querySelector(".modal-button-prev");
+            prevButton.setAttribute("prev-params", imgParams.getParamsAsGET())
+            prevButtonSmall.setAttribute("prev-params", imgParams.getParamsAsGET())
+            prevButton.addEventListener("click", onClickPrev);
+            prevButtonSmall.addEventListener("click", onClickPrev);
 
             //fab is-fav
             const favButton = document.getElementById("is-fav");
