fixed difficulty on the page

--- a/template.html
+++ b/template.html
@@ -94,7 +94,7 @@
         list.options[parseInt(list.getAttribute('value')) - 1].setAttribute('selected', 'selected')
 
         list = document.getElementById("difficulty")
-        list.options[parseInt(list.getAttribute('value')) - 1].setAttribute('selected', 'selected')
+        list.options[parseInt(list.getAttribute('value'))].setAttribute('selected', 'selected')
 
 
         window.onload = function()
