--- a/template.html
+++ b/template.html
@@ -36,6 +36,7 @@
                     <option value="1">Academic</option>
                     <option value="2">Pron</option>
                     <option value="3">Artist</option>
+                    <option value="4">The Bits</option>
                 </select>
             </div>
             <div class="row">
