added folder link to image study page

--- a/template.html
+++ b/template.html
@@ -58,6 +58,7 @@
                 </select>
                 <label for="same-folder">Same folder:</label>
                 <input type="checkbox" id="same-folder" value="true">
+                <a href="/folder/${path_id}"><img class="dir-link" src="/static/link.png"></a>
             </div>
 <!--            <div id="caption">-->
 <!--                <ul>-->
